--- a/ExportedModules/ThisWorkbook.cls
+++ b/ExportedModules/ThisWorkbook.cls
@@ -17,11 +17,33 @@ Private Sub Workbook_Open()
     
     ' Protect the "Game" worksheet but allow scripts to interact with it
     'With Worksheets("Game")
-    '    .Protect userinterfaceonly:=True
-    '    .EnableSelection = xlNoSelection  ' Prevent any cell selection on this sheet
+      '  .Protect userinterfaceonly:=True
+     '   .EnableSelection = xlNoSelection  ' Prevent any cell selection on this sheet
     'End With
     
     Call CreateGameSheet
+    
+    Dim ws_rd As Worksheet
+    Set ws_rd = Worksheets("Game Records")
+    Dim historyList As MSForms.ListBox
+
+    Set historyList = ws_rd.OLEObjects("ListBox1").Object
+
+    With historyList
+        .Font.Name = "Arial"
+        .Font.Size = 10
+        .BackColor = RGB(0, 0, 0)
+        .ForeColor = RGB(255, 255, 255)
+    End With
+    
+    Dim currentSheet As Worksheet
+    Set currentSheet = ThisWorkbook.ActiveSheet
+    
+    ws_rd.Activate
+    ActiveWindow.DisplayGridlines = False
+    currentSheet.Activate
+    ActiveWindow.DisplayGridlines = False
+    
 End Sub
 
 Private Sub Workbook_BeforeClose(Cancel As Boolean)
