Change comments to English and adjust the scoring rule

--- a/ExportedModules/ThisWorkbook.cls
+++ b/ExportedModules/ThisWorkbook.cls
@@ -16,10 +16,15 @@ Private Sub Workbook_Open()
     Application.DisplayAlerts = False
     
     ' Protect the "Game" worksheet but allow scripts to interact with it
-    'With Worksheets("Game")
-      '  .Protect userinterfaceonly:=True
-     '   .EnableSelection = xlNoSelection  ' Prevent any cell selection on this sheet
-    'End With
+    With Worksheets("Game")
+        .Protect userinterfaceonly:=True
+        .EnableSelection = xlNoSelection  ' Prevent any cell selection on this sheet
+    End With
+    
+    With Worksheets("Game Records")
+        .Protect userinterfaceonly:=True
+        .EnableSelection = xlNoSelection  ' Prevent any cell selection on this sheet
+    End With
     
     Call CreateGameSheet
     
