--- a/ExportedModules/Game2P.cls
+++ b/ExportedModules/Game2P.cls
@@ -8,3 +8,22 @@ Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = True
 Attribute VB_Exposed = True
 
+Private Sub CommandButton1_Click()
+
+    Call StartNewGame_2p
+
+End Sub
+
+Private Sub CommandButton2_Click()
+
+    Call UpdateGame_2p
+
+End Sub
+
+Private Sub CommandButton3_Click()
+
+    Game.Visible = xlSheetVisible
+    Worksheets("Game").Activate
+    Game2P.Visible = xlSheetVeryHidden
+
+End Sub
