--- a/ExportedModules/GameRecords.cls
+++ b/ExportedModules/GameRecords.cls
@@ -8,7 +8,11 @@ Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = True
 Attribute VB_Exposed = True
 Private Sub CommandButton1_Click()
+    
+    Game.Visible = xlSheetVisible
     Worksheets("Game").Activate
+    GameRecords.Visible = xlSheetVeryHidden
+    
 End Sub
 
 Private Sub CommandButton2_Click()
