add the new BGM and add volume up& down functions

--- a/ExportedModules/ThisWorkbook.cls
+++ b/ExportedModules/ThisWorkbook.cls
@@ -52,7 +52,7 @@ Private Sub Workbook_Open()
     currentSheet.Activate
     ActiveWindow.DisplayGridlines = False
     
-    
+    Call BGM_Start
     Call SelectMode
     
 End Sub
